--- a/taxfix/.babelrc
+++ b/taxfix/.babelrc
@@ -1,12 +1,8 @@
 {
-  "presets": [
-    "babel-preset-react-native-stage-0/decorator-support"
-  ],
+  "presets": [["es2015", { "modules": false }], "react", "react-native"],
   "env": {
-    "development": {
-      "plugins": [
-        "transform-react-jsx-source"
-      ]
+    "test": {
+      "presets": [["es2015"], "react", "react-native"]
     }
   }
 }
