--- a/taxfix/package.json
+++ b/taxfix/package.json
@@ -2,9 +2,23 @@
   "name": "taxfix",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+    "preset": "react-native"
+  },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
+    "babel-jest": "^21.2.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-native": "^4.0.0",
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-config-airbnb-base": "^11.0.1",
@@ -13,28 +27,25 @@
     "eslint-plugin-jsx": "0.0.2",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "jest-expo": "^21.0.2",
+    "jest": "^21.2.1",
     "react-test-renderer": "16.0.0-alpha.12",
-    "redux-devtools": "^3.4.0"
-  },
-  "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "redux-devtools": "^3.4.0",
+    "regenerator-runtime": "^0.11.0"
   },
   "dependencies": {
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
-    "react-native-dropdown": "git+https://github.com/g6ling/react-native-dropdown.git",
     "react-native-modal-picker": "0.0.16",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
+  },
+  "scripts": {
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "test": "jest --no-cache test --watch --notify"
   }
 }
