--- a/taxfix/package.json
+++ b/taxfix/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
     "jest": "^21.2.1",
+    "jsdoc": "^3.5.5",
     "react-test-renderer": "16.0.0-alpha.12",
     "redux-devtools": "^3.4.0",
     "regenerator-runtime": "^0.11.0"
@@ -46,6 +47,7 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "jest --no-cache test --watch --notify"
+    "test": "jest --no-cache test --watch --notify",
+    "jsdoc": "jsdoc src -r -c jsdoc-config.json -d docs"
   }
 }
