--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
-  "presets": [["es2015", { "modules": false }], "react", "react-native"],
+  "presets": ["react-native"],
   "env": {
     "test": {
-      "presets": [["es2015"], "react", "react-native"]
+      "presets": ["react-native"]
     }
   }
 }
